1.bug修复 2.跟新版本号

--- a/every_where_trip/src/main/AndroidManifest.xml
+++ b/every_where_trip/src/main/AndroidManifest.xml
@@ -104,7 +104,7 @@
         <activity
             android:name=".ui.main.activity.MainActivity"
             android:launchMode="singleTask"
-            android:theme="@style/FullScreen" />
+            android:theme="@style/AppTheme" />
         <activity android:name=".ui.my.activity.InformationActivity" />
         <activity android:name=".ui.my.activity.UpdateInfoActivity" />
         <activity android:name=".ui.my.activity.FollowActivity" />
